infrastructure/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  namespace: auth
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: keycloak-backend-tls@kubernetescrd
spec:
  ingressClassName: traefik-admin
  tls:
    - hosts: [keycloak.admin.cluster.local.com]
      secretName: wildcard-admin-cluster-tls
  rules:
    - host: keycloak.admin.cluster.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: https   # 443 del Service
